<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/historyRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/history_list">

    <TextView
        android:id="@+id/historyAppName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/indigo"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/historyStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/historyAppName"
        android:text="@string/historyTime"
        android:textColor="@color/indigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/historyAppName"
        android:layout_toRightOf="@id/historyStartTime"
        android:paddingLeft="10dp"
        android:text="@string/to"
        android:textColor="@color/indigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/historyEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/historyAppName"
        android:layout_toRightOf="@id/to"
        android:paddingLeft="10dp"
        android:text="@string/historyTime"
        android:textColor="@color/indigo"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/timeUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:paddingRight="20dp"
        android:text=""
        android:textColor="@color/indigo"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>